# mobium

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  data  docker-compose.yml  package-lock.json
.cargo/: config.toml
.github/workflows/: release.yml
client/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: app.css  app.d.ts  app.html
client/src-tauri/: Cargo.toml  ICONS-README.md  create-icons-simple.bat  generate-icons.bat  generate-icons.ps1  generate_icons.py  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: README.txt
client/src-tauri/src/: commands.rs  crypto.rs  db.rs  db_crypto.rs  main.rs  state.rs  tor.rs  validate.rs  websocket.rs
client/src/lib/: channelScreen.ts  channelVoice.ts  events.ts  features.ts  fileTransfer.ts  iceFilter.ts  nsfwFilter.ts  voice.ts
client/src/lib/components/: ChannelConfig.svelte  ChannelNav.svelte  ChannelSettings.svelte  Chat.svelte  ConnectionModal.svelte  ContextPanel.svelte  Feed.svelte  IconRail.svelte  Login.svelte  MainApp.svelte  MemberList.svelte  Onboarding.svelte  PostCard.svelte  PostComposer.svelte  ProfilePage.svelte  ProfilePicker.svelte  Sidebar.svelte  Toast.svelte  UserList.svelte  VoiceCall.svelte  index.ts
client/src/lib/stores/: index.ts
client/src/routes/: +layout.svelte  +layout.ts  +page.svelte
docs/: ARCHITECTURE.md  CRYPTO.md  DEPLOYMENT.md  DESIGN_TWO_TIER.md  IMPLEMENTATION_SUMMARY.md  MESH_ARCHITECTURE.md  TESTING.md  TODO.md
scripts/: netmon.sh  security-audit.sh  test-coverage.sh  test-windows.bat
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  config.rs  database.rs  main.rs  routing.rs  tls.rs  websocket.rs
server/src/db/: mod.rs  sqlite.rs
server/tests/: config_tests.rs  database_tests.rs
shared/: Cargo.toml
shared/src/: error.rs  keys.rs  lib.rs  padding.rs  ratchet.rs  recovery.rs  sender_keys.rs  sss.rs  x3dh.rs
shared/tests/: crypto_tests.rs  edge_case_tests.rs  protocol_tests.rs
website/: index.html
