[package]
name = "securecomm-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "securecomm-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Async runtime
tokio.workspace = true
tokio-util = "0.7"

# Serialization
serde.workspace = true
serde_json = "1"
rmp-serde = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Certificate generation
rcgen = "0.13"

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3"

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Shared crypto
securecomm-shared = { path = "../shared" }
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
dashmap = "5"
hex = "0.4"
rand = "0.8"
subtle = "2"

# Memory allocator — jemalloc reduces fragmentation and improves throughput
# on long-running server processes. Linux-only (glibc/musl); the default
# system allocator is used on Windows/macOS.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio-test = "0.4"