[package]
name = "securecomm-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets", "reusable_secrets"] }
curve25519-dalek = "4"
rand = "0.8"
ring = "0.17"
argon2 = "0.5"
aes-gcm = { version = "0.10", features = ["std"] }
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
bip39 = { version = "2", features = ["rand"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
zerocopy = { version = "0.8", features = ["derive"] }
hex = "0.4"
rmp-serde = "1.1"
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
serde_json = "1.0"