[package]
name = "mobium-client"
version = "0.1.0"
description = "Mobium - Zero-Knowledge Encrypted Communication"
authors = ["Mobium Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tarpy7/mobium"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"
dirs = "5"

# Crypto
mobium-shared = { path = "../../shared" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets", "reusable_secrets"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "derive"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
url = "2"
rmp-serde = "1"

# Crypto (used directly by db_crypto / db)
aes-gcm = { version = "0.10", features = ["std"] }
hmac = { version = "0.12", features = ["std"] }
argon2 = "0.5"
zeroize = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

[[bin]]
name = "mobium-client"
path = "src/main.rs"
